# easy_cmake

./: CMakeLists.txt  README.md  default.nix  flake.nix  result
cmake/: cmake_macrosConfig.cmake.in  create_package.cmake  easy_find_packages.cmake
